Fix: Correct horizontal position of image on mobile devices.
This mimics what is deployed.

--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ font-family:/* monospace */'Syne', sans-serif;
     }
 
     .cover.main {
-      margin: 2rem 0;
+      margin: 0rem 0;
     }
 
   }
